# AiM-Cosim

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
docker/: Dockerfile  README.md  docker-compose.yml
scripts/: benchmark_hf_weight_reference.py  consolidate_summer26_results.py  download_hf_weights.py  extract_matmul_results.py  generate_matmul_trace.py  generate_summer26_llm_figures.py  run_hf_weight_projection.py  run_llama32_propagation_experiment.py  run_matmul_regression.sh  run_summer26_hf_stage5_7.py  run_wikitext_full_pim_decoder_outputs.py  run_wikitext_full_pim_projection_outputs.py  run_wikitext_prefix_final_hidden.py
src/configs/: aim_rtl.yaml  aim_rtl_file.yaml  aim_rtl_fileload.yaml  aim_rtl_logging_off.yaml  aim_rtl_logging_summary.yaml  aim_rtl_stage4_debug_af.yaml  aim_rtl_stage4_debug_af_summary.yaml  aim_rtl_stage4_debug_mac.yaml  aim_rtl_stage4_debug_mac_summary.yaml  aim_timing_only.yaml  hbmpim_functional_smoke.yaml  hbmpim_stage5f_compare.yaml  hbmpim_timing_only.yaml
src/core/architecture/: architecture_backend.h  architecture_types.h  hbmpim_architecture_backend.cpp  hbmpim_architecture_backend.h
src/core/compute_engine/: aim_compute_engine.cpp  aim_compute_engine.h  compute_engine.h  hbmpim_compute_engine.cpp  hbmpim_compute_engine.h
src/core/controller/: AiMRTL_dram_controller.cpp  aim_compute_scoreboard.h  aim_row_locality.h  divergence_tracker.cpp  divergence_tracker.h  functional_dispatcher.cpp  functional_dispatcher.h  result_logger.cpp  result_logger.h  timing_constraint_query.h
src/core/data_loader/: data_loader.cpp  data_loader.h
src/core/hbmpim/: hbmpim_trace_lowering.h  pim_block_model.cpp  pim_block_model.h  pim_cmd.cpp  pim_cmd.h
src/core/memory_manager/: hbmpim_memory_manager.cpp  hbmpim_memory_manager.h  memory_manager.cpp  memory_manager.h
src/core/verilator_engine/: verilator_engine.cpp  verilator_engine.h
src/rtl/: README.md  accumulator.v  accumulator_param.v  activation_unit.v  adder_tree.v  bf16_to_q816.v  pim_mac_tree.v  pim_mac_tree_mag32.v  pim_mac_tree_mag37.v  pu.v  q816_to_bf16_rne.v  without_multilatch_accumulator.v
src/tools/: hbmpim_pimsim_stage5f_compare.cpp
tests/data/: tc1_single_mac16.trace
tests/result/llama32_error_accumulation/summary/: mode2_batch_token_speed_seq16_summary.csv  wikitext_full_pim_decoder_outputs_batch_token_metadata_meta-llama_Llama-3.2-1B-Instruct_seq16.json  wikitext_full_pim_decoder_outputs_batch_token_workers4_chunk4_metadata_meta-llama_Llama-3.2-1B-Instruct_seq16.json  wikitext_full_pim_decoder_outputs_batch_token_workers4_chunk4_summary_meta-llama_Llama-3.2-1B-Instruct_seq16.csv  wikitext_full_pim_decoder_outputs_per_token_workers4_metadata_meta-llama_Llama-3.2-1B-Instruct_seq16.json  wikitext_full_pim_decoder_outputs_seq16_metadata.json
tests/result/result_summer26/figures/: supplemental_cupy_cuda_aggregate.csv  supplemental_cupy_cuda_summary.csv  supplemental_torch_functional_aggregate.csv  supplemental_torch_functional_summary.csv
tests/result/result_summer26/functional_regression/: functional_summary.csv
tests/result/result_summer26/llm_shape/: hf_weight_functional_summary.csv  hf_weight_projection_aggregate_summary.csv
tests/result/result_summer26/reference_time/cpu_gpu/: hf_weight_execution_time_aggregate.csv
tests/result/result_summer26/summary/: final_experiment_report.md  hf_weight_actual_pre_activation_projection_aggregate.csv  hf_weight_actual_pre_activation_projection_summary.csv  hf_weight_actual_pre_activation_vs_random_aggregate.csv  hf_weight_all_projection_cpu_gpu_summary.csv  hf_weight_execution_time_comparison.csv  hf_weight_mode_summary.csv  pre_activation_projection_comparison_summary.md  projection_activation_source_three_way_summary.csv  projection_activation_source_three_way_summary.md  stage_status.md
